Fixing slider highlights in toolbar and slider thumb position. Slider thumb position now sets to zoom.default if there if all the settings are reset from the prefernces panel. I have removed Brians scrollbar pane fix from this build and will be updating his code shortly.

--- a/source/css/default.css
+++ b/source/css/default.css
@@ -222,3 +222,26 @@
     background-color: transparent;
     z-index: 2147483644; /* Below Equinox panel and mouse */
 }
+
+
+/* Simulate Windows Scrollbars in Webkit */
+/*
+body::-webkit-scrollbar {
+    -webkit-appearance: none!important;
+}
+
+body::-webkit-scrollbar:vertical {
+    width: 15px!important;
+}
+
+body:-webkit-scrollbar:horizontal {
+    height: 11px!important;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 8px!important;
+    border: 2px solid white!important;
+    background-color: rgba(0, 0, 0, 1)!important;
+}*/
+
+
